Adding Win32API constants

--- a/UzunTec.WinUI.Utils/UzunTec.WinUI.Utils.csproj
+++ b/UzunTec.WinUI.Utils/UzunTec.WinUI.Utils.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SizingExtensions.cs" />
+    <Compile Include="Win32ApiConstants.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
