--- a/UzunTec.WinUI.Controls/UzunTec.WinUI.Controls.csproj
+++ b/UzunTec.WinUI.Controls/UzunTec.WinUI.Controls.csproj
@@ -35,12 +35,16 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="UzunTec.Utils.Common, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\CREN.Eletronic.Records\packages\UzunTec.Utils.Common.0.1.1\lib\netstandard2.0\UzunTec.Utils.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IThemeControlWithPrefixSuffix.cs" />
     <Compile Include="Interfaces\IThemeControlWithHintPlaceholder.cs" />
     <Compile Include="InternalContracts\ThemeControlWithHintPlaceHolderProperties.cs" />
-    <Compile Include="InternalContracts\ThemeControlWithHintProperties - Copy.cs" />
+    <Compile Include="InternalContracts\ThemeButtonProperties.cs" />
+    <Compile Include="InternalContracts\ThemeControlWithPrefixSuffixProperties.cs" />
     <Compile Include="ThemeConstants.cs" />
     <Compile Include="Themes\FontFamilyManager.cs" />
     <Compile Include="InternalContracts\SideIconData.cs" />
@@ -134,6 +138,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Resources\Roboto-Black.ttf" />
     <None Include="Resources\Roboto-BlackItalic.ttf" />
     <None Include="Resources\Roboto-Bold.ttf" />
