--- a/UzunTec.WinUI.Utils/UzunTec.WinUI.Utils.csproj
+++ b/UzunTec.WinUI.Utils/UzunTec.WinUI.Utils.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorExtensions.cs" />
     <Compile Include="ControlExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SizingExtensions.cs" />
