--- a/UzunTec.WinUI.Controls/UzunTec.WinUI.Controls.csproj
+++ b/UzunTec.WinUI.Controls/UzunTec.WinUI.Controls.csproj
@@ -58,6 +58,9 @@
     <Compile Include="ThemeLabel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ThemeNumericTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Themes\FontFamilyManager.cs" />
     <Compile Include="InternalContracts\SideIconData.cs" />
     <Compile Include="InternalContracts\ThemeControlProperties.cs" />
