Adding New Form With NC Operation

--- a/UzunTec.WinUI.Controls/UzunTec.WinUI.Controls.csproj
+++ b/UzunTec.WinUI.Controls/UzunTec.WinUI.Controls.csproj
@@ -40,6 +40,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormWithNc.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Interfaces\IThemeControlWithPrefixSuffix.cs" />
     <Compile Include="Interfaces\IThemeControlWithHintPlaceholder.cs" />
     <Compile Include="InternalContracts\ThemeControlWithHintPlaceHolderProperties.cs" />
