--- a/UzunTec.WinUI.Controls/UzunTec.WinUI.Controls.csproj
+++ b/UzunTec.WinUI.Controls/UzunTec.WinUI.Controls.csproj
@@ -42,9 +42,19 @@
   <ItemGroup>
     <Compile Include="Interfaces\IThemeControlWithPrefixSuffix.cs" />
     <Compile Include="Interfaces\IThemeControlWithHintPlaceholder.cs" />
+    <Compile Include="InternalContracts\ThemePostitProperties.cs" />
     <Compile Include="InternalContracts\ThemeControlWithHintPlaceHolderProperties.cs" />
     <Compile Include="InternalContracts\ThemeButtonProperties.cs" />
     <Compile Include="InternalContracts\ThemeControlWithPrefixSuffixProperties.cs" />
+    <Compile Include="Postit.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ThemeBaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThemeBaseForm.Designer.cs">
+      <DependentUpon>ThemeBaseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ThemeComboBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -55,8 +65,14 @@
     <Compile Include="ThemeDataGridView.Designer.cs">
       <DependentUpon>ThemeDataGridView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ThemeDatePicker.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ThemeLabel.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ThemeModalBase.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="ThemeNumericTextBox.cs">
       <SubType>Component</SubType>
@@ -98,6 +114,12 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThemeBaseForm.resx">
+      <DependentUpon>ThemeBaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThemeModalBase.resx">
+      <DependentUpon>ThemeModalBase.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
