--- a/UzunTec.WinUI.Utils/UzunTec.WinUI.Utils.csproj
+++ b/UzunTec.WinUI.Utils/UzunTec.WinUI.Utils.csproj
@@ -42,6 +42,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SizingExtensions.cs" />
     <Compile Include="Win32ApiConstants.cs" />
+    <Compile Include="Win32ApiExtensions.cs" />
+    <Compile Include="Win32Structures.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
