--- a/UzunTec.WinUI.TestApp/UzunTec.WinUI.TestApp.csproj
+++ b/UzunTec.WinUI.TestApp/UzunTec.WinUI.TestApp.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
     <Compile Include="MaterialTextBox1.cs">
       <SubType>Component</SubType>
     </Compile>
